--- a/BeerAppDemo/BeerAppDemo/BeerAppDemo.csproj
+++ b/BeerAppDemo/BeerAppDemo/BeerAppDemo.csproj
@@ -178,9 +178,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\Beer\BeerController.js" />
+    <Content Include="Scripts\Beer\BeerModel.js" />
+    <Content Include="Scripts\Beer\BeerView.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Global\Boot.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -218,7 +222,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Beer\Index.cshtml" />
-    <Content Include="Views\Beer\NewBeerForm.cshtml" />
+    <Content Include="Views\Beer\EditBeer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
