--- a/BeerAppDemo/BeerAppDemo/BeerAppDemo.csproj
+++ b/BeerAppDemo/BeerAppDemo/BeerAppDemo.csproj
@@ -183,6 +183,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Global\Boot.js" />
+    <Content Include="Scripts\Global\GlobalHelper.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
